RESOLVED FIXED235253
AX: Remove AXAriaAttributeChanged notification because it's not used by anything
https://bugs.webkit.org/show_bug.cgi?id=235253
Summary AX: Remove AXAriaAttributeChanged notification because it's not used by anything
Tyler Wilcock
Reported 2022-01-14 14:35:56 PST
Nothing uses AXAriaAttributeChanged, but we still spend time processing it through the notification pipeline (postNotification -> m_notificationsToPost -> updateIsolatedTree(notifications) + postPlatformNotification(notifications)).
Attachments
Patch (3.99 KB, patch)
2022-01-14 14:37 PST, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-01-14 14:36:28 PST
Tyler Wilcock
Comment 2 2022-01-14 14:37:58 PST
chris fleizach
Comment 3 2022-01-14 14:40:50 PST
Comment on attachment 449227 [details] Patch we're sure GTK/Win don't use this?
Tyler Wilcock
Comment 4 2022-01-14 14:48:38 PST
Yeah, quite sure. Windows doesn't handle it, and doesn't have a fallthrough in postPlatformNotification for notifications that aren't explicitly handled by name (it returns early if given an unexpected notification). ATK / ATSPI seems to be the same, but CC'd Carlos to confirm. Carlos, can you confirm that the ATK / ATSPI ports don't and won't use this?
chris fleizach
Comment 5 2022-01-14 14:50:00 PST
(In reply to Tyler Wilcock from comment #4) > Yeah, quite sure. Windows doesn't handle it, and doesn't have a fallthrough > in postPlatformNotification for notifications that aren't explicitly handled > by name (it returns early if given an unexpected notification). ATK / ATSPI > seems to be the same, but CC'd Carlos to confirm. > > Carlos, can you confirm that the ATK / ATSPI ports don't and won't use this? Ok if we pass all the builds probably ok. It can always be added back if we need it
EWS
Comment 6 2022-01-15 09:12:40 PST
Committed r288056 (246076@main): <https://commits.webkit.org/246076@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449227 [details].
Note You need to log in before you can comment on or make changes to this bug.