AX: Remove AXAriaAttributeChanged notification because it's not used by anything https://bugs.webkit.org/show_bug.cgi?id=235253

Reviewed by Chris Fleizach.

Nothing uses AXAriaAttributeChanged, but we still spend time processing
it through the notification pipeline (postNotification -> m_notificationsToPost -> updateIsolatedTree(notifications) + postPlatformNotification(notifications)).

This patch deletes it.

* accessibility/AXLogger.cpp:
(WebCore::operator<<):
* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleAttributeChange):
* accessibility/AXObjectCache.h:
* accessibility/atspi/AXObjectCacheAtspi.cpp:
(WebCore::AXObjectCache::postPlatformNotification):



Canonical link: https://commits.webkit.org/246076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288056 268f45cc-cd09-0410-ab3c-d52691b4dbfc